# dirt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml
crates/dirt_atom/: Cargo.toml  README.md
crates/dirt_atom/src/: insert.rs  lib.rs  radius.rs
crates/dirt_bond/: Cargo.toml  README.md
crates/dirt_bond/src/: breakage.rs  lib.rs  plasticity.rs
crates/dirt_clump/: Cargo.toml  README.md
crates/dirt_clump/src/: body.rs  lib.rs
crates/dirt_contact_analysis/: Cargo.toml  README.md
crates/dirt_contact_analysis/src/: lib.rs
crates/dirt_core/: Cargo.toml  README.md
crates/dirt_core/src/: lib.rs
crates/dirt_fixes/: Cargo.toml  README.md
crates/dirt_fixes/src/: lib.rs
crates/dirt_gpu/: CONTACT_HISTORY_DESIGN.md  Cargo.toml  GPU_PLUGIN_DESIGN.md
crates/dirt_gpu/examples/: compare_cpu.rs  pile.rs  residency_bench.rs  resident_bonded_bench.rs  resident_validate.rs  validate_trajectory.rs
crates/dirt_gpu/src/: beam_bond_force.rs  bond_force.rs  granular_force.rs  lib.rs  wall_force.rs
crates/dirt_granular/: Cargo.toml  README.md
crates/dirt_granular/examples/: coherence_validate.rs  resident_plugin_validate.rs
crates/dirt_granular/src/: contact.rs  gpu.rs  gpu_resident.rs  gpu_resident_mpi.rs  granular_temp.rs  lib.rs  rotational.rs  tangential.rs
crates/dirt_measure_plane/: Cargo.toml  README.md
crates/dirt_measure_plane/src/: lib.rs
crates/dirt_test_utils/: Cargo.toml  README.md
crates/dirt_test_utils/src/: lib.rs
crates/dirt_thermal/: Cargo.toml  README.md
crates/dirt_thermal/src/: lib.rs
crates/dirt_wall/: Cargo.toml  README.md
crates/dirt_wall/src/: lib.rs
docs/: book.toml
docs/_planning/: dirt_atom.md  dirt_bond.md  dirt_clump.md  dirt_contact_analysis.md  dirt_core.md  dirt_fixes.md  dirt_granular.md  dirt_measure_plane.md  dirt_test_utils.md  dirt_wall.md
docs/src/: SUMMARY.md  introduction.md
docs/src/getting-started/: config-anatomy.md  first-simulation.md  installation.md
docs/src/physics/: bonds.md  clumps.md  contact.md  diagnostics.md  fixes.md  walls.md
docs/src/reference/: config.md  insertion.md  materials.md  validation.md  writing-tests.md
docs/src/stack/: overview.md
examples/: VALIDATION.md
examples/SPH_glass_sphere_calibration/: README.md  calibration.yaml  run_parallel_01_04.sh  run_production_all.sh  watcher_parallelize_01.sh
examples/SPH_glass_sphere_calibration/01_shear_rheology/: README.md  (+3 more)
examples/bench_angle_of_repose/: README.md  config.toml  main.rs  sweep.py
examples/bench_clump_haff_cooling/: README.md  config.toml  config_mpi_8m.toml  main.rs  plot.py  sweep.py
examples/bench_column_collapse/: README.md  config.toml  main.rs  sweep.py
examples/bench_fiber_crossover/: README.md  bonds.data  config.toml  main.rs  sweep.py
examples/bench_granular_conductivity/: README.md  config.toml  main.rs  sweep.py
examples/bench_hertz_rebound/: README.md  config.toml  main.rs  plot.py  run_sweep.py  sweep.py  validate.py
examples/bench_hopper_beverloo/: README.md  config.toml  main.rs  sweep.py
examples/bench_jkr_adhesion/: README.md  config.toml  main.rs  sweep.py
examples/bench_lebc_shear/: README.md  config.toml  config_timing.toml  main.rs  sweep.py
examples/bench_oblique_impact/: README.md  config.toml  main.rs  sweep.py
examples/bench_plate_sinkage/: README.md  config.toml  main.rs  sweep.py
examples/bench_rod_haff_cooling/: README.md  config.toml  main.rs  plot.py  sweep.py
examples/bench_rolling_decay/: README.md  config.toml  main.rs  sweep.py
examples/bench_sliding_friction/: README.md  config.toml  main.rs  sweep.py
examples/bench_sphere_haff_cooling/: README.md  config.toml  main.rs  plot.py  sweep.py
examples/bond_cantilever/: README.md  config.toml  main.rs
examples/bond_fiber_tensile/: README.md  config.toml  main.rs  validate.py
examples/bond_fiber_tensile_overlap/: README.md  config.toml
examples/bond_mpi_drift/: README.md  config.toml  config_mpi2.toml  main.rs
examples/clump_dimer_drop/: config.toml  main.rs
examples/contact_analysis_demo/: config.toml  main.rs
examples/fiber_bond/: README.md  axial_elastic.toml  axial_plastic_piecewise.toml  bending_plastic_guo.toml  bending_vibration.toml  cantilever_bending.toml  main.rs  validate.py
examples/fiber_bond_breakage/: README.md  axial_strain_constant.toml  axial_stress_constant.toml  axial_stress_weibull.toml  combined_strain.toml  combined_stress.toml  interaction_linear_stress.toml  localization_10mm.toml  localization_10mm_regularized.toml  localization_1mm.toml  localization_200bonds.toml  localization_20bonds.toml  validate.py
examples/granular_basic/: README.md  config.toml  main.rs  validate_config.toml
examples/granular_gas_benchmark/: README.md  haff_analysis.py  in.lammps  main.rs  run_2m_mpi.toml  run_2m_single.toml  run_debug.toml  test_physics.sh  validate.py
examples/hello_bed/: config.toml  main.rs
examples/hopper/: README.md  config.toml  main.rs  validate.py  validate_config.toml  validate_long_config.toml
examples/hopper_quiescence/: .gitignore  README.md  bench.sh  config_baseline.toml  config_coherence.toml  contact.rs  main.rs  quiescence.rs  val_baseline.toml  val_coherence.toml
examples/measure_plane_throughput/: config.toml  main.rs
examples/mpi_gpu_validate/: config_n1.toml  config_n2.toml  main.rs
examples/mpi_loadbalance_validate/: cfg_n1.toml  cfg_n2.toml  main.rs
examples/mpi_resident_validate/: cfg_n1.toml  cfg_n2.toml  cfg_n2_w4.toml  main.rs
examples/perf_mpi_scaling/: README.md  config.toml  main.rs  scaling_gas.py  start_all.sh
examples/two_particle_collision/: config.toml  main.rs
examples/wall_servo_lid/: config.toml  main.rs
validation/: _summarize.py  coherence_plan.md  coherence_validation.md  cpu_precision_baseline.csv  cpu_precision_baseline.md  cpu_precision_final_states.json  gpu_bonds_validation.md  gpu_validation.md  mpi_gpu_milestone1.md  precision_baseline.py  residency_design.md  residency_step1.md  residency_step1_mpi.md  residency_step1_plugin.md  residency_step4_overlap.md  residency_step5_loadbalance.md
(+125 files in other folders)
