[package]
name = "dirt-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DIRT simulation examples and binaries"
publish = false

[workspace]
members = [
  "crates/*",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SueHeir/dirt"

[features]
default = ["mpi_backend", "precision-double"]
mpi_backend = ["dirt_core/mpi_backend", "dep:libffi-sys"]
precision-double = ["dirt_core/precision-double"]
precision-mixed = ["dirt_core/precision-mixed"]
precision-single = ["dirt_core/precision-single"]

[[example]]
name = "hello_bed"
path = "examples/hello_bed/main.rs"

[[example]]
name = "two_particle_collision"
path = "examples/two_particle_collision/main.rs"

[[example]]
name = "measure_plane_throughput"
path = "examples/measure_plane_throughput/main.rs"

[[example]]
name = "clump_dimer_drop"
path = "examples/clump_dimer_drop/main.rs"

[[example]]
name = "wall_servo_lid"
path = "examples/wall_servo_lid/main.rs"

[[example]]
name = "hopper"
path = "examples/hopper/main.rs"

[[example]]
name = "bench_hertz_rebound"
path = "examples/bench_hertz_rebound/main.rs"

[[example]]
name = "bench_oblique_impact"
path = "examples/bench_oblique_impact/main.rs"

[[example]]
name = "bench_rolling_decay"
path = "examples/bench_rolling_decay/main.rs"

[[example]]
name = "bench_clump_haff_cooling"
path = "examples/bench_clump_haff_cooling/main.rs"

[[example]]
name = "bench_rod_haff_cooling"
path = "examples/bench_rod_haff_cooling/main.rs"

[[example]]
name = "bench_sphere_haff_cooling"
path = "examples/bench_sphere_haff_cooling/main.rs"

[[example]]
name = "bond_fiber_tensile"
path = "examples/bond_fiber_tensile/main.rs"

[[example]]
name = "bond_mpi_drift"
path = "examples/bond_mpi_drift/main.rs"

[[example]]
name = "bond_cantilever"
path = "examples/bond_cantilever/main.rs"

[[example]]
name = "fiber_bond"
path = "examples/fiber_bond/main.rs"

[[example]]
name = "bench_fiber_crossover"
path = "examples/bench_fiber_crossover/main.rs"

[[example]]
name = "hopper_quiescence"
path = "examples/hopper_quiescence/main.rs"

[[example]]
name = "bench_column_collapse"
path = "examples/bench_column_collapse/main.rs"

[[example]]
name = "bench_hopper_beverloo"
path = "examples/bench_hopper_beverloo/main.rs"

[[example]]
name = "perf_mpi_scaling"
path = "examples/perf_mpi_scaling/main.rs"

[[example]]
name = "bench_lebc_shear"
path = "examples/bench_lebc_shear/main.rs"

[[example]]
name = "bench_granular_conductivity"
path = "examples/bench_granular_conductivity/main.rs"

[[example]]
name = "contact_analysis_demo"
path = "examples/contact_analysis_demo/main.rs"

# ── SPH glass-sphere calibration suite (one example per DEM closure) ──
[[example]]
name = "sphcal_shear_rheology"
path = "examples/SPH_glass_sphere_calibration/01_shear_rheology/main.rs"

[[example]]
name = "sphcal_compressibility"
path = "examples/SPH_glass_sphere_calibration/02_compressibility/main.rs"

[[example]]
name = "sphcal_angle_of_repose"
path = "examples/SPH_glass_sphere_calibration/03_angle_of_repose/main.rs"

[[example]]
name = "sphcal_enduring_contact"
path = "examples/SPH_glass_sphere_calibration/04_enduring_contact/main.rs"

[[example]]
name = "sphcal_cooling_dissipation"
path = "examples/SPH_glass_sphere_calibration/05_cooling_dissipation/main.rs"

[[example]]
name = "sphcal_conductivity"
path = "examples/SPH_glass_sphere_calibration/06_conductivity/main.rs"

[[example]]
name = "sphcal_column_collapse"
path = "examples/SPH_glass_sphere_calibration/07_column_collapse/main.rs"

[[example]]
name = "sphcal_cooperativity_length"
path = "examples/SPH_glass_sphere_calibration/08_cooperativity_length/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
dirt_core = { path = "./crates/dirt_core", default-features = false }
serde = { version = "1", features = ["derive"] }
dirt_clump = { path = "./crates/dirt_clump" }
dirt_measure_plane = { path = "./crates/dirt_measure_plane" }
soil_derive = { git = "https://github.com/SueHeir/soil.git", branch = "main" }
soil_deform = { git = "https://github.com/SueHeir/soil.git", branch = "main", default-features = false }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
# Force libffi-sys to use system libffi (via pkg-config) instead of building
# from source. libffi-sys 2.3.0 has a broken aarch64 macOS assembler; Homebrew
# libffi is set via PKG_CONFIG_PATH.
libffi-sys = { version = "2.3.0", features = ["system"], optional = true }

[[example]]
name = "mpi_gpu_validate"
path = "examples/mpi_gpu_validate/main.rs"

[[example]]
name = "mpi_resident_validate"
path = "examples/mpi_resident_validate/main.rs"
