[package]
name = "dirt_atom"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Per-atom DEM data (radius, density) with pack/unpack and MaterialTable for DIRT"
keywords = ["dem", "atom", "material", "simulation"]
categories = ["simulation", "science"]

[dependencies]
soil_core = { git = "https://github.com/SueHeir/soil.git", branch = "master", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
soil_derive = { git = "https://github.com/SueHeir/soil.git", branch = "master" }
serde = { version = "1", features = ["derive"] }
rand = "0.9"
rand_distr = "0.5.1"
