[package]
name = "dirt_bond"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bond force models for DIRT: elastic bonds, breakable bonds, sintering"

[dependencies]
soil_core = { git = "https://github.com/SueHeir/soil.git", rev = "eb90c179be7bb8f37aa9fbd2cac5eb8457302958", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
dirt_atom = { path = "../dirt_atom", version = "0.1.3" }
soil_print = { git = "https://github.com/SueHeir/soil.git", rev = "eb90c179be7bb8f37aa9fbd2cac5eb8457302958" }
serde = { version = "1", features = ["derive"] }
rand = { version = "0.9", features = ["small_rng"] }

[dev-dependencies]
dirt_test_utils = { path = "../dirt_test_utils", version = "0.1.3" }
