[package]
name = "dirt_bond"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bond force models for DIRT: elastic bonds, breakable bonds, sintering"

[features]
precision-double = ["soil_core/precision-double"]
precision-mixed = ["soil_core/precision-mixed"]
precision-single = ["soil_core/precision-single"]

[dependencies]
soil_core = { git = "https://github.com/SueHeir/soil.git", branch = "main", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
dirt_atom = { path = "../dirt_atom", version = "0.1.3" }
soil_print = { git = "https://github.com/SueHeir/soil.git", branch = "main", default-features = false }
serde = { version = "1", features = ["derive"] }
rand = { version = "0.9", features = ["small_rng"] }

[dev-dependencies]
dirt_test_utils = { path = "../dirt_test_utils", version = "0.1.3" }
