[package]
name = "dirt_clump"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Multisphere/clump rigid body composites for non-spherical DEM particles"

[dependencies]
soil_core = { git = "https://github.com/SueHeir/soil.git", branch = "master", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
soil_derive = { git = "https://github.com/SueHeir/soil.git", branch = "master" }
dirt_atom = { path = "../dirt_atom", version = "0.1.3" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.9"

[features]
default = []
mpi_backend = ["soil_core/mpi_backend"]

[dev-dependencies]
dirt_test_utils = { path = "../dirt_test_utils", version = "0.1.3" }
