[package]
name = "dirt_contact_analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DEM contact analysis: per-contact force output, coordination number, and fabric tensor"
keywords = ["dem", "contact", "force-chain", "fabric-tensor"]
categories = ["simulation", "science"]

[features]
precision-double = ["soil_core/precision-double"]
precision-mixed = ["soil_core/precision-mixed"]
precision-single = ["soil_core/precision-single"]

[dependencies]
soil_core = { git = "https://github.com/SueHeir/soil.git", branch = "main", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
soil_print = { git = "https://github.com/SueHeir/soil.git", branch = "main", default-features = false }
soil_derive = { git = "https://github.com/SueHeir/soil.git", branch = "main" }
dirt_atom = { path = "../dirt_atom", version = "0.1.3" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
dirt_test_utils = { path = "../dirt_test_utils", version = "0.1.3" }
