[package]
name = "dirt_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Discrete Element Method simulation framework with plugin architecture"
readme = "../../README.md"
keywords = ["dem", "discrete-element", "simulation", "granular"]
categories = ["simulation", "science"]

[features]
default = ["mpi_backend"]
mpi_backend = ["soil_core/mpi_backend", "dirt_clump/mpi_backend"]

[dependencies]
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
grass_app = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
grass_derive = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
soil_core = { path = "../../../soil/crates/soil_core", version = "0.1.3", default-features = false }
soil_verlet = { path = "../../../soil/crates/soil_verlet", version = "0.1.3" }
soil_print = { path = "../../../soil/crates/soil_print", version = "0.1.3" }
dirt_atom = { path = "../dirt_atom", version = "0.1.3" }
dirt_bond = { path = "../dirt_bond", version = "0.1.3" }
dirt_clump = { path = "../dirt_clump", version = "0.1.3" }
dirt_granular = { path = "../dirt_granular", version = "0.1.3" }
dirt_wall = { path = "../dirt_wall", version = "0.1.3" }
soil_derive = { path = "../../../soil/crates/soil_derive", version = "0.1.3" }
soil_deform = { path = "../../../soil/crates/soil_deform", version = "0.1.3" }
dirt_fixes = { path = "../dirt_fixes", version = "0.1.3" }
dirt_thermal = { path = "../dirt_thermal", version = "0.1.3" }
dirt_measure_plane = { path = "../dirt_measure_plane", version = "0.1.3" }
dirt_contact_analysis = { path = "../dirt_contact_analysis", version = "0.1.3" }
