[package]
name = "dirt_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Discrete Element Method simulation framework with plugin architecture"
readme = "../../README.md"
keywords = ["dem", "discrete-element", "simulation", "granular"]
categories = ["simulation", "science"]

[features]
default = ["mpi_backend"]
mpi_backend = ["soil_core/mpi_backend", "dirt_clump/mpi_backend"]

[dependencies]
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
grass_app = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
grass_derive = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
soil_core = { git = "https://github.com/SueHeir/soil.git", rev = "eb90c179be7bb8f37aa9fbd2cac5eb8457302958", default-features = false }
soil_verlet = { git = "https://github.com/SueHeir/soil.git", rev = "eb90c179be7bb8f37aa9fbd2cac5eb8457302958" }
soil_print = { git = "https://github.com/SueHeir/soil.git", rev = "eb90c179be7bb8f37aa9fbd2cac5eb8457302958" }
dirt_atom = { path = "../dirt_atom", version = "0.1.3" }
dirt_bond = { path = "../dirt_bond", version = "0.1.3" }
dirt_clump = { path = "../dirt_clump", version = "0.1.3" }
dirt_granular = { path = "../dirt_granular", version = "0.1.3" }
dirt_wall = { path = "../dirt_wall", version = "0.1.3" }
soil_derive = { git = "https://github.com/SueHeir/soil.git", rev = "eb90c179be7bb8f37aa9fbd2cac5eb8457302958" }
soil_deform = { git = "https://github.com/SueHeir/soil.git", rev = "eb90c179be7bb8f37aa9fbd2cac5eb8457302958" }
soil_fixes = { git = "https://github.com/SueHeir/soil.git", rev = "eb90c179be7bb8f37aa9fbd2cac5eb8457302958" }
dirt_fixes = { path = "../dirt_fixes", version = "0.1.3" }
dirt_measure_plane = { path = "../dirt_measure_plane", version = "0.1.3" }
dirt_contact_analysis = { path = "../dirt_contact_analysis", version = "0.1.3" }
