[package]
name = "dirt_fixes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Atom manipulation fixes (addforce, setforce, freeze, move_linear, viscous, gravity) for DIRT"
keywords = ["fix", "force", "freeze", "molecular-dynamics", "dem"]
categories = ["simulation", "science"]

[dependencies]
soil_core = { path = "../../../soil/crates/soil_core", version = "0.1.3", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
soil_print = { path = "../../../soil/crates/soil_print", version = "0.1.3", default-features = false }
dirt_atom = { path = "../dirt_atom", version = "0.1.3" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
dirt_test_utils = { path = "../dirt_test_utils", version = "0.1.3" }
