[package]
name = "dirt_granular"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Granular physics for DIRT: Hertz normal contact, Mindlin tangential friction, rotational dynamics"
keywords = ["dem", "hertz", "granular", "contact"]
categories = ["simulation", "science"]

[dependencies]
soil_core = { git = "https://github.com/SueHeir/soil.git", branch = "master", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
dirt_atom = { path = "../dirt_atom", version = "0.1.3" }
soil_verlet = { git = "https://github.com/SueHeir/soil.git", branch = "master" }

[dev-dependencies]
dirt_test_utils = { path = "../dirt_test_utils", version = "0.1.3" }
