[package]
name = "dirt_granular"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Granular physics for DIRT: Hertz normal contact, Mindlin tangential friction, rotational dynamics"
keywords = ["dem", "hertz", "granular", "contact"]
categories = ["simulation", "science"]

[features]
# Scheduler-mediated host<->device coherence (coherence_plan.md). Default-off:
# registers a CoherenceRegistry + the resident GPU mirror so CPU systems added to
# a resident config sync transparently instead of silently dropping. Off => the
# resident step uses the eager per-window download (unchanged behaviour).
gpu_coherence = []
precision-double = ["soil_core/precision-double", "dirt_gpu/precision-double"]
precision-mixed = ["soil_core/precision-mixed", "dirt_gpu/precision-mixed"]
precision-single = ["soil_core/precision-single", "dirt_gpu/precision-single"]

[dependencies]
soil_core = { git = "https://github.com/SueHeir/soil.git", branch = "main", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
dirt_atom = { path = "../dirt_atom", version = "0.1.3" }
dirt_gpu = { path = "../dirt_gpu", version = "0.1.3", default-features = false }
soil_verlet = { git = "https://github.com/SueHeir/soil.git", branch = "main", default-features = false }

[dev-dependencies]
dirt_test_utils = { path = "../dirt_test_utils", version = "0.1.3" }
