[package]
name = "dirt_measure_plane"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "General-purpose measurement plane plugin for counting particle crossings and mass flow rates in DIRT simulations"
keywords = ["dem", "measurement", "throughput", "simulation"]
categories = ["simulation", "science"]

[dependencies]
soil_core = { git = "https://github.com/SueHeir/soil.git", rev = "eb90c179be7bb8f37aa9fbd2cac5eb8457302958", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
soil_print = { git = "https://github.com/SueHeir/soil.git", rev = "eb90c179be7bb8f37aa9fbd2cac5eb8457302958" }
serde = { version = "1", features = ["derive"] }
