[package]
name = "dirt_test_utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared test utilities for DIRT crates"

[dependencies]
soil_core = { git = "https://github.com/SueHeir/soil.git", rev = "eb90c179be7bb8f37aa9fbd2cac5eb8457302958", default-features = false }
dirt_atom = { path = "../dirt_atom", version = "0.1.3" }
