[package]
name = "dirt_test_utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared test utilities for DIRT crates"

[dependencies]
soil_core = { git = "https://github.com/SueHeir/soil.git", branch = "master", default-features = false }
dirt_atom = { path = "../dirt_atom", version = "0.1.3" }
