[package]
name = "dirt_thermal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Contact-based heat conduction for DEM particles in DIRT"
keywords = ["dem", "thermal", "heat", "conduction"]
categories = ["simulation", "science"]

[dependencies]
soil_core = { path = "../../../soil/crates/soil_core", version = "0.1.3", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
soil_derive = { path = "../../../soil/crates/soil_derive" }
dirt_atom = { path = "../dirt_atom", version = "0.1.3" }
dirt_wall = { path = "../dirt_wall", version = "0.1.3" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
dirt_test_utils = { path = "../dirt_test_utils", version = "0.1.3" }
