[package]
name = "dirt_wall"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "General plane wall contact forces with Hertz repulsion for DIRT simulations"
keywords = ["dem", "wall", "contact", "simulation"]
categories = ["simulation", "science"]

[dependencies]
soil_core = { path = "../../../soil/crates/soil_core", version = "0.1.3", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
dirt_atom = { path = "../dirt_atom", version = "0.1.3" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
dirt_test_utils = { path = "../dirt_test_utils", version = "0.1.3" }
